# fedora-kernel-manager

./: .gitignore  Cargo.toml  Makefile  README.MD  build.rs  fedora-kernel-manager.spec  fedora-kernel-manajer.spec
.github/workflows/: build-fc40-x86_64.yml  build-fc40.yml  build.yml  fedora-40.yml
data/: com.github.cosmicfusion.fedora-kernel-manager.desktop  db-kernel-cachy.json  db_kernel.json  db_kernel_cachy.json  kernel_branches.json  resources.gresource.xml  scx_scheds.json  style.css
data/kernel_branches/: kernel-cachyos.json  kernel.json
data/locales/: en_US.json  fr_FR.json
data/polkit-1/actions/: fdm.change.scx.policy  fdm.kernel.cachyos.init.policy  fdm.modify.package.policy  fkm.change.scx.policy  fkm.kernel.cachyos.init.policy  fkm.modify.package.policy
data/polkit-1/rules.d/: 99-fdm.kernel.cachyos.init.rules  99-fkm.kernel.cachyos.init.rules
data/scripts/: change_scx.sh  generate_package_info.sh  get_version.sh  kernel-cachyos-init.sh  modify_package.sh
spec/: fedora-kernel-manager.spec
src/: main.rs
src/build_ui/: mod.rs
src/content/: mod.rs
src/kernel_package_row/: imp.rs  mod.rs
src/kernel_pkg/: mod.rs
src/sched_ext/: mod.rs
