[package]
name = "fedora-kernel-manager"
version = "0.1.5"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_5"] }
async-channel = "2.3.1"
duct = "0.13.7"
glib = "0.19.7"
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"] }
homedir = "0.2.1"
linux-version = "0.1.1"
os_pipe = "1.2.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.117"
version-compare = "0.2.0"
rust-i18n = "3.0.1"
textwrap = "0.16.1"

[build-dependencies]
glib-build-tools = "0.19.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
