[package]
name = "fedora-kernel-manager"
version = "0.2.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_7"] }
async-channel = "2.3.1"
duct = "0.13.7"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_16"] }
homedir = "0.2.1"
os_pipe = "1.2.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.117"
version-compare = "0.2.0"
rust-i18n = "3.0.1"
textwrap = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
regex = "1.11.1"

[build-dependencies]
glib-build-tools = "0.19.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
